--- a/oneseminar/oneseminar.vcxproj.filters
+++ b/oneseminar/oneseminar.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="CreateMassive.cpp">
       <Filter>Исходные файлы\First_seminar</Filter>
     </ClCompile>
+    <ClCompile Include="Sort.cpp">
+      <Filter>Исходные файлы\First_seminar</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
